--- a/src/pages/status.astro
+++ b/src/pages/status.astro
@@ -37,7 +37,7 @@ const distributionStatus = [
     status: 'operational',
     version: latestRelease.version,
     lastSync: latestRelease.date,
-    url: 'https://www.npmjs.com/package/@rapscli/raps',
+    url: 'https://www.npmjs.com/package/@dmytro-yemelianov/raps-cli',
     icon: '📦',
   },
   {
@@ -45,7 +45,7 @@ const distributionStatus = [
     status: 'operational',
     version: latestRelease.version,
     lastSync: latestRelease.date,
-    url: 'https://pypi.org/project/raps-aps/',
+    url: 'https://pypi.org/project/raps/',
     icon: '🐍',
   },
   {
@@ -53,7 +53,7 @@ const distributionStatus = [
     status: 'operational',
     version: latestRelease.version,
     lastSync: latestRelease.date,
-    url: 'https://hub.docker.com/r/rapscli/raps',
+    url: 'https://hub.docker.com/r/dmytroyemelianov/raps',
     icon: '🐳',
   },
   {
